--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="sub-content">
     <div class="s-part">
-      Don't have an account?<a href="#"> Sign up</a>
+      Don't have an account?  <a routerLink="/signup"> Sign up</a>
     </div>
   </div>
 </div>
