--- a/insta-clone/src/app/signup/signup.component.html
+++ b/insta-clone/src/app/signup/signup.component.html
@@ -1,7 +1,18 @@
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
-<div id="wrapper">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<div class="container-fluid bg" id="wrapper">
+    <div class="row justify-content-center">
+  <div class="col-12 col-sm-6 col-md-6 mx-auto">
   <div class="main-content">
-    <div class="header">
+    <div class="header ">
       <img src="https://i.imgur.com/zqpwkLQ.png" />
       <div>Sign up to see photos and videos from your friends.</div>
     </div>
@@ -16,7 +27,7 @@
       <div>
         <input type="password" placeholder="Password" class="input-4" />
       </div>
-      <input type="button" value="Sign up" class="btn" />
+      <input type="button" value="Sign up" class="btn"/>
       <div class="overlap-text">
       <p>By signing up, you agree to our Terms , Data Policy and Cookies Policy .</p>
     </div>
@@ -24,7 +35,11 @@
   </div>
   <div class="sub-content">
     <div class="s-part">
-      Have an account?<a href="#"> Log in</a>
+      Have an account?<a routerLink="/login">Log in</a>
+
+      </div>
+      </div>
+    
     </div>
   </div>
 </div>
