--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -1,12 +1,17 @@
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
-<div id="wrapper">
+<div id="container-fluid wrapper">
   <div class="main-content">
     <div class="header">
       <img src="https://i.imgur.com/zqpwkLQ.png" />
     </div>
     <div class="l-part">
-      <input type="text" placeholder="Phone number, username or email" class="input-1" />
+      <input type="text" placeholder="Username or Email" class="input-1" />
       <div >
         <input type="password" placeholder="Password" class="input-2" />
       </div>
@@ -18,7 +23,7 @@
   </div>
   <div class="sub-content">
     <div class="s-part">
-      Don't have an account?<a href="#"> Sign up</a>
+      &nbsp;Don't&nbsp;have&nbsp;an&nbsp;account?&nbsp;<a href="#">&nbsp;Sign&nbsp;up&nbsp;</a>
     </div>
   </div>
 </div>
