--- a/insta-clone/src/app/signup/signup.component.html
+++ b/insta-clone/src/app/signup/signup.component.html
@@ -1,5 +1,10 @@
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
-<div id="wrapper">
+<div id="container-fluid wrapper">
   <div class="main-content">
     <div class="header">
       <img src="https://i.imgur.com/zqpwkLQ.png" />
@@ -24,7 +29,7 @@
   </div>
   <div class="sub-content">
     <div class="s-part">
-      Have an account?<a href="#"> Log in</a>
+      &nbsp;Have&nbsp;an&nbsp;account?&nbsp;<a href="#">&nbsp;Log&nbsp;in&nbsp;</a>
     </div>
   </div>
 </div>
