insta feed is made

--- a/insta-clone/src/app/image-gallery/image-gallery.component.css
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.css
@@ -148,7 +148,7 @@ img {
 /* Gallery Section */
 
 .gallery {
-    display: flex;
+   /* display: flex;*/
     flex-wrap: wrap;
     margin: -1rem -1rem;
     padding-bottom: 3rem;
