follow/unfollow api and ui modification

--- a/insta-clone/src/app/app.component.html
+++ b/insta-clone/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
+<app-homenav></app-homenav>
 <app-feed></app-feed>
 <h1>Navbar elements will come here !</h1>
 <app-profile-dashboard ></app-profile-dashboard>
