--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -6,8 +6,8 @@
          <img id="lettering" src="../../assets/images/letter.png"/>
      </div>
      
-     <div class="SearchContainer"> 
-        <input id="Search-Input" type="search" placeholder="Search" value="">
+     <div class="searchContainer"> 
+        <input id="searchInput" type="search" placeholder="Search" value="">
     </div>
      <div id="activity">
             <input type="checkbox" id="exploreToggle" class="visually-hidden">
