Integrated UI, but is not responsive because of some components

--- a/insta-clone/src/app/app.component.html
+++ b/insta-clone/src/app/app.component.html
@@ -1,8 +1,2 @@
-
-
-<app-feed></app-feed>
-<h1>Navbar elements will come here !</h1>
-<app-profile-dashboard ></app-profile-dashboard>
 <router-outlet></router-outlet>
-<app-image-gallery></app-image-gallery>
-
+<app-homenav></app-homenav>
