--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar fixed-top navbar-light bg-white">
+<!-- <app-homenav></app-homenav> -->
+<nav class="navbar fixed-top navbar-light bg-white mb-5">
     <div class="container">
       <div id="logo">
          <img id="ig" src="../../assets/images/iglogo.png">
@@ -15,7 +16,7 @@
             <input type="checkbox" id="toggle" class="visually-hidden">
             <label for="toggle"  class="control"></label>
             <input type="checkbox" id="userToggle" class="visually-hidden">
-            <label for="userToggle"  class="userControl"></label>
+            <label for="userToggle"  class="userControl" routerLink= "profile"></label>
      </div>
      
       
