--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-light bg-white">
+<nav class="navbar fixed-top navbar-light bg-white" id="nav">
     <div class="container">
       <div id="logo">
          <img id="ig" src="../../assets/images/iglogo.png">
