Minor UI configurations

--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -5,7 +5,7 @@
 <app-homenav></app-homenav>
 <section class="container">
     <!-- <div *ngFor="let img of allImages" class="mt-5 mx-auto"> -->
-        <div class="card" class="mx-auto mt-5" *ngFor="let img of allImages">
+        <div class="card" class=" mt-5" *ngFor="let img of allImages">
             <div class="card-header">
                 <div>
                     <img src={{img}} alt="post"class="avatar">
