--- a/insta-clone/src/app/homenav/homenav.component.css
+++ b/insta-clone/src/app/homenav/homenav.component.css
@@ -31,7 +31,7 @@
 
 @media screen and (max-width: 993px){
     .searchContainer {
-      display: none;
+      visibility: hidden;
     }
     #logo{
         
