--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -15,7 +15,7 @@
             <input type="checkbox" id="toggle" class="visually-hidden">
             <label for="toggle"  class="control"></label>
             <input type="checkbox" id="userToggle" class="visually-hidden">
-            <label for="userToggle"  class="userControl" routerLink= "profile"></label>
+            <label for="userToggle"  class="userControl" routerLink= "/profile"></label>
      </div>
     </div>  
 </nav>
