adding to module

--- a/insta-clone/src/app/app.component.html
+++ b/insta-clone/src/app/app.component.html
@@ -2,6 +2,6 @@
 <app-profile-dashboard ></app-profile-dashboard>
 <router-outlet></router-outlet>
 <app-image-gallery></app-image-gallery>
-<app-update-profile></app-update-profile>
+<app-edit></app-edit>
 
 
