--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -1,4 +1,3 @@
-<app-homenav></app-homenav>
 <div class="d-sm-none d-md-block d-none d-sm-block mt-5">
     <div class="row mx-4">
         <div class="col-md-3 offset-md-1">
@@ -33,7 +32,7 @@
 
 
 <!-- For smaller screens -->
-<div class="d-block d-sm-none">
+<div class="d-block d-sm-none mt-2">
 
     <div class="row mx-2">
         <div class="col-3 offset-1">
@@ -68,3 +67,4 @@
     </div>
     <hr class="m-3">
 </div>
+<app-image-gallery></app-image-gallery>
