--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -2,10 +2,9 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 
-<app-homenav></app-homenav>
 <section class="container">
     <!-- <div *ngFor="let img of allImages" class="mt-5 mx-auto"> -->
-        <div class="card" class=" mt-5" *ngFor="let img of allImages">
+        <div class="card" class="" *ngFor="let img of allImages">
             <div class="card-header">
                 <div>
                     <img src={{img}} alt="post"class="avatar">
