--- a/insta-clone/src/app/homenav/homenav.component.css
+++ b/insta-clone/src/app/homenav/homenav.component.css
@@ -1,13 +1,14 @@
 #nav{
+    width: 100%;
     background: white;
     border: 2vh;
     border-color: white;
+    position: sticky;
 }
 .container{
     display: flex;
     flex-flow: nowrap;
     align-items: stretch;
-
     }
 #logo{
     margin-top: 2vh;
