--- a/insta-clone/src/app/image-gallery/image-gallery.component.css
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.css
@@ -202,6 +202,7 @@ img {
 }
 
 .gallery-image {
+    /* width: calc(31.25rem - 1%); */
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -221,7 +222,6 @@ Remove or comment-out the code block below to see how the browser will fall-back
         grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
         grid-gap: 2rem;
     }
-
     
     .gallery-item,
     .gallery {
