--- a/insta-clone/src/styles.css
+++ b/insta-clone/src/styles.css
@@ -1,7 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-body{
+ body{
     background-color: #fafafa;
 }
+/*
 .container {
     max-width: 0.1rem;
     margin: 0 auto;
@@ -44,4 +44,4 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
