--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -15,7 +15,7 @@
       <div >
         <input type="password" placeholder="Password" class="input-2" />
       </div>
-      <input type="button" value="Log In" class="btn" (click)="loginFunction($event)"/>
+      <input type="button" (click)="loginFunction()" value="Log In" class="btn"/>
       <div class="overlap-text">
       <a href="#">Forgot Password?</a>
     </div>
