errors present in controllers corrected

--- a/insta-clone/src/app/login/login.component.css
+++ b/insta-clone/src/app/login/login.component.css
@@ -13,8 +13,8 @@
   .main-content {
     position: relative;
     width: 250px;
-    height: 90%;
-    margin: 1.875rem auto 1.25rem;
+    height: 30rem;
+    margin: 8rem auto;
     background-color: #fff;
     border: 2px solid #e6e6e6;
     padding: 1.875rem 3.125rem 1.875rem;
