--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -1,3 +1,4 @@
+<app-homenav></app-homenav>
 <div class="d-sm-none d-md-block d-none d-sm-block mt-5">
     <div class="row mx-4">
         <div class="col-md-3 offset-md-1">
