UI is made more responsive

--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -5,7 +5,12 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 
+ 
 <section class="container-fluid">
+
+<app-homenav></app-homenav>
+<section class="container">
+
     <!-- <div *ngFor="let img of allImages" class="mt-5 mx-auto"> -->
        
         <div class="row">
@@ -24,25 +29,21 @@
                     <div class="location">{{location}}</div>
                     
                 </div>
+
             </div>
 
                
              <div id="#responsive ">
                 <img src={{img}} class=" image"  alt="post">
                </div>
-                       
-                
-                          <div class="row">
-                               <div class="column">
-                                   
-                                  
-                                     <img src="https://image.flaticon.com/icons/svg/25/25424.svg" class="icon"width="6%"/>
-                                   
-                                     <img src="https://image.flaticon.com/icons/svg/54/54916.svg"class="icon" width="6%"/>
-                                     
-                                     <img src="https://image.flaticon.com/icons/svg/126/126536.svg"class="icon" width="6%"/>
-                             </div>
-                          </div>
+
+                  <div class="row">
+                        <div class="column">
+                              <img src="https://image.flaticon.com/icons/svg/25/25424.svg" class="icon"width="6%"/>
+                              <img src="https://image.flaticon.com/icons/svg/54/54916.svg"class="icon" width="6%"/>
+                              <img src="https://image.flaticon.com/icons/svg/126/126536.svg"class="icon" width="6%"/>
+                        </div>
+                 </div>
                           <div class="like">
                               
                               4944 likes
@@ -63,6 +64,7 @@
                                       add comment
                                   </div>
                          </div>
+
                     
                 </div>
             </div>
@@ -100,12 +102,11 @@
            
         
     <!-- </div> -->
-    <ul>
-     <li>
-         <input type="text">
-     </li>
+    
 
-    </ul>
+               </div>
+       </div>
+     
 
 </section>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
