--- a/insta-clone/src/app/image-gallery/image-gallery.component.html
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.html
@@ -16,11 +16,7 @@
                                           <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart-o" aria-hidden="true"></i> 89</li>
                                           <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
                                       </ul>
-<<<<<<< HEAD
-    
-=======
-         
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
+
                                  </div>
                             </div>
             </div>
@@ -28,11 +24,11 @@
     
      </div>
         <!-- End of container -->
-<<<<<<< HEAD
-    
-=======
+
     </div>
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
+
+
+    </div>
     
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
