--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -5,15 +5,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 
-<<<<<<< HEAD
- 
 <section class="container-fluid">
-
-=======
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
-<app-homenav></app-homenav>
-<section class="container">
-
     <!-- <div *ngFor="let img of allImages" class="mt-5 mx-auto"> -->
        
         <div class="row">
@@ -32,46 +24,31 @@
                     <div class="location">{{location}}</div>
                     
                 </div>
-<<<<<<< HEAD
-
             </div>
 
                
              <div id="#responsive ">
                 <img src={{img}} class=" image"  alt="post">
                </div>
-
-                  <div class="row">
-                        <div class="column">
-                              <img src="https://image.flaticon.com/icons/svg/25/25424.svg" class="icon"width="6%"/>
-                              <img src="https://image.flaticon.com/icons/svg/54/54916.svg"class="icon" width="6%"/>
-                              <img src="https://image.flaticon.com/icons/svg/126/126536.svg"class="icon" width="6%"/>
-                        </div>
-                 </div>
-=======
-              
-                               <div class="responsive ">
-                                         <img src={{img}} class=" image"  alt="post">
-                                 </div>
                        
                 
                           <div class="row">
-                            <div class="column">
-                            
+                               <div class="column">
                                    
-                                     <img src="https://image.flaticon.com/icons/svg/25/25424.svg" class="icon"width="6%"/>
                                   
+                                     <img src="https://image.flaticon.com/icons/svg/25/25424.svg" class="icon"width="6%"/>
+                                   
                                      <img src="https://image.flaticon.com/icons/svg/54/54916.svg"class="icon" width="6%"/>
-                                      <img src="https://image.flaticon.com/icons/svg/126/126536.svg"class="icon" width="6%"/>
-                         </div>
+                                     
+                                     <img src="https://image.flaticon.com/icons/svg/126/126536.svg"class="icon" width="6%"/>
+                             </div>
                           </div>
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
                           <div class="like">
                               
                               4944 likes
                             
                           </div>
-                          <div class="card-footer1"> 
+                          <div class="mycard-footer"> 
                                <div class="comment-intro">
                                    <a href="#" class="comment-link">
                                     <p>view all 24 comments</p>
@@ -83,11 +60,11 @@
                                  <p class="comm-para"><span id="username"style="margin-right:20px">{{username2}}</span>{{comment2}}</p>
                                </div> 
                                   <div>
+
                                       add comment
+                                      <routerlink="comment"
                                   </div>
                          </div>
-<<<<<<< HEAD
-
                     
                 </div>
             </div>
@@ -125,17 +102,13 @@
            
         
     <!-- </div> -->
-    
+    <ul>
+     <li>
+         <input type="text">
+     </li>
 
-               </div>
-       </div>
-     
+    </ul>
 
-=======
-               </div>
-       </div>
-     
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
 </section>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
