--- a/insta-clone/src/app/image-gallery/image-gallery.component.css
+++ b/insta-clone/src/app/image-gallery/image-gallery.component.css
@@ -68,10 +68,16 @@ img {
 
 
 
+
+/* Profile Section */
+
+
+
 /* Gallery Section */
 
 .gallery {
-   /* display: flex;*/
+    display: flex;
+
 
     flex-wrap: wrap;
     margin: -1rem -1rem;
@@ -93,11 +99,7 @@ img {
     align-items: center;
     position: absolute;
     top: 0;
-
-
     width: 77%;
-
-
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
 }
@@ -132,6 +134,7 @@ img {
 .gallery-image {
 
 
+
     max-width: 100%;
     width: 18.25rem;
     height: 100%;
@@ -143,34 +146,8 @@ img {
 
     
 
-=======
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
-/*
-
-The following code will only run if your browser supports CSS grid.
-
-Remove or comment-out the code block below to see how the browser will fall-back to flexbox & floated styling. 
-
-*/
-
-@supports (display: grid) {
    
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-        grid-gap: 2rem;
-    }
 
-<<<<<<< HEAD
-
-    
-
-=======
->>>>>>> 5626a89d0592fff58f63000ea6d571b57d3ff748
     
     .gallery-item,
     .gallery {
@@ -178,4 +155,4 @@ Remove or comment-out the code block below to see how the browser will fall-back
         margin: 0;
     }
 
-}
+
