some minor changes

--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-
+<app-homenav></app-homnenav>
 <section class="container-fluid">
     <!-- <div *ngFor="let img of allImages" class="mt-5 mx-auto"> -->
        
@@ -119,7 +119,7 @@
 <Script>
     function addcomment(){
    var node = document.createElement("li");   
-var textnode = document.createTextNode(document.getElementById("btn").value);         
+var textnode = document.createTextNode(document.getElementById("comment").value);         
 node.appendChild(textnode);                              
 document.getElementById("list").appendChild(node);   
 console.log(list);
