--- a/insta-clone/src/app/app.component.html
+++ b/insta-clone/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!-- <app-homenav></app-homenav>
-<router-outlet></router-outlet> -->
-<app-create-post></app-create-post>
+<!-- <app-homenav></app-homenav> -->
+<router-outlet></router-outlet>
+<!-- <app-create-post></app-create-post> -->
