--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -1,6 +1,3 @@
-
-
-
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -50,7 +47,7 @@
                           </div>
                           <div class="mycard-footer"> 
                                <div class="comment-intro">
-                                   <a href="#" class="comment-link">
+                                   <a href="/feed" class="comment-link">
                                     <p>view all 24 comments</p>
                                 </a>   
                                 </div>
@@ -72,7 +69,7 @@
                 </div>
             </div>
               
-                   <div class="col-lg-4 col-md-6 col-sm-0 col-xs-0">
+                   <!-- <div class="col-lg-4 col-md-6 col-sm-0 col-xs-0">
                       
                         <div class="card shadow mb-3">
                             <div class="card-body " >
@@ -97,9 +94,19 @@
                             
                           </div>
                           
-            </div>
+            </div> -->
            
         </div>
+
+        <section id="lab_social_icon_footer" class="plus">
+          <!-- Include Font Awesome Stylesheet in Header -->
+          <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+          <div class="container">
+          <div class="text-center center-block">
+          <i id="social-em" class="fa fa-plus fa-3x social"></i>
+          </div>
+          </div>
+          </section>
 
    
            
@@ -111,16 +118,3 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-
-<script>
-    function addcomment(){
-   var node = document.createElement("li");   
-var textnode = document.createTextNode(document.getElementById("comment").value);         
-node.appendChild(textnode);                              
-list=document.getElementById("list").appendChild(node);   
-console.log(list);
-
-    }
-</script>
