--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -17,7 +17,7 @@
                              </div>  
                   
                 <div class="profile-info">
-                    <div class="name">{{username}}</div>
+                    <div class="name" (click)="goToProfile()">{{username}}</div>
                     <div class="location">{{location}}</div>
                     
                 </div>
@@ -33,9 +33,9 @@
                                <div class="column">
                                    
                                   
-                                     <img src="https://image.flaticon.com/icons/svg/25/25424.svg" class="icon"width="6%"/>
+                                     <img src="https://image.flaticon.com/icons/svg/25/25424.svg" #liked class="icon"width="6%" (click)="liked()"/>
                                    
-                                     <img src="https://image.flaticon.com/icons/svg/54/54916.svg"class="icon" width="6%"/>
+                                     <img src="https://image.flaticon.com/icons/svg/54/54916.svg" #comment_add class="icon" width="6%"/>
                                      
                                      <img src="https://image.flaticon.com/icons/svg/126/126536.svg"class="icon" width="6%"/>
                              </div>
@@ -107,9 +107,6 @@
           </div>
           </div>
           </section>
-
-   
-           
         
     <!-- </div> -->
    
