--- a/insta-clone/src/app/create-post/create-post.component.html
+++ b/insta-clone/src/app/create-post/create-post.component.html
@@ -1,4 +1,22 @@
-<div class="file-upload">
+<!-- <div class="file-upload">
     <input type="file" name="image" ng2FileSelect [uploader] = "uploader">
     <button type="submit" (click)="uploader.uploadAll()" [disabled] = "!uploader.getNotUploadedItems().length">Upload</button> 
+</div> -->
+<div class="h-100">
+    <div class="image-upload text-center">
+        <label for="file-input">
+          <img src="https://icon-library.net/images/upload-photo-icon/upload-photo-icon-21.jpg"/>
+        </label>
+        <input id="file-input" type="file" />
+    </div>
+    
+    <div class="form-group text-center">
+        <label>Add post</label>
+        <input class="form-control" type="text" name="fullname" required placeholder="Write your thoughts!!"/>
+        <span class="Error"></span>
+    </div>
+    
+    <div class="form-group text-center ">
+        <input class="btn btn-primary btn-block" type="submit" value="Post"/>
+    </div>
 </div>
