--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -31,9 +31,13 @@
                 
                           <div class="row">
                                <div class="column">
-                                
-                                
-                                    
+                                <div id="activity">
+                                <input type="checkbox" id="togglefeed" class="visually-hidden">
+                                 <label for="togglefeed"  class="control"></label>
+                                </div> 
+                                   <div (click)="addcomment()">
+                                    <i class="fa fa-comment-o fa-2x "></i>
+                                   </div>
                                   
                                  
                               </div>
@@ -75,12 +79,10 @@
                                     
                               <p><img src={{suggestion.url}} class="rounded-circle float-left mr-2" width="40"/>
                                 <a href="#">{{suggestion.name}} <small class="text-muted">{{suggestion.username}}</small></a></p>
-                              <hr>
-                              <p><img src={{suggestion.url}} class="rounded-circle float-left mr-2" width="40"/>
-                                <a href="#">{{suggestion.name}} <small class="text-muted">{{suggestion.username}}</small></a></p>
-                              <hr>
-                              <p><img src={{suggestion.url}} class="rounded-circle float-left mr-2" width="40"/>
-                                <a href="#">{{suggestion.name}} <small class="text-muted">{{suggestion.username}}</small></a></p>
+                                <button class="follow"(click)="follow()">
+                                  {{buttonName}}
+                                </button><hr>
+                             
                               <hr>
                             </div>
                             </div>
