--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -67,35 +67,7 @@
                          </div>
                     
                 </div>
-            </div>
-              
-                   <!-- <div class="col-lg-4 col-md-6 col-sm-0 col-xs-0">
-                      
-                        <div class="card shadow mb-3">
-                            <div class="card-body " >
-                              
-                              <h5>Suggestions for you</h5>
-                              <div *ngFor="let suggestion of suggestions">
-                                     <a routerlink="[/image,suggestion.username]">
-                              <p><img src={{suggestion.url}} class="rounded-circle float-left mr-2" width="40">
-                                <a href="#">{{suggestion.name}} <small class="text-muted">{{suggestion.username}}</small></a></p></a>
-                              <hr>
-                              <p><img src={{suggestion.url}} class="rounded-circle float-left mr-2" width="40">
-                                <a href="#">{{suggestion.name}} <small class="text-muted">{{suggestion.username}}</small></a></p>
-                              <hr>
-                              <p><img src={{suggestion.url}} class="rounded-circle float-left mr-2" width="40">
-                                <a href="#">{{suggestion.name}} <small class="text-muted">{{suggestion.username}}</small></a></p>
-                              <hr>
-                            </div>
-                            </div>
-                            <div class="card-footer">
-                              <a href="#">Find more</a>
-                            </div>
-                            
-                          </div>
-                          
-            </div> -->
-           
+            </div>           
         </div>
 
         <!-- Floating Button Here -->
@@ -117,11 +89,12 @@
                 </button>
               </div>
               <div class="modal-body">
+                <input class="w-25" type="file" name="image" ng2FileSelect [uploader]="uploader">
                 <input type="text" #caption>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="uploader.uploadAll()" [disabled] = "!uploader.getNotUploadedItems().length">Post</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" (click)="uploadPost()" [disabled] = "!uploader.getNotUploadedItems().length">Post</button>
+                <button type="button" class="btn btn-secondary" (click)="closeModal()" data-dismiss="modal">Cancel</button>
               </div>
             </div>
           </div>
