--- a/insta-clone/src/app/edit-profile/edit-profile.component.html
+++ b/insta-clone/src/app/edit-profile/edit-profile.component.html
@@ -26,7 +26,7 @@
                                           </div>
                                     </div>
                                     <div class="form-group">
-                                          <label class="col-sm-2 control-label">InstaHandle</label>
+                                          <label class="col-sm-2 control-label">UserName</label>
                                           <div class="col-sm-4">
                                                 <input class="form-control" type="text" name="userName"
                                                       placeholder="UserName" ng-model="me.lastName">
@@ -63,8 +63,8 @@
                                   <h6>Similar Account Suggestions</h6>
                                   <div class="form-group">
                                         <div class="col-sm-offset-2 col-sm-10">   
-                                  <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-<label for="vehicle1"> Include your account when recommending similar accounts people might want to follow.[?]</label><br>  
+                                  <input type="checkbox" id="account" name="account" value="account">
+<label for="account"> Include your account when recommending similar accounts people might want to follow.[?]</label><br>  
 </div>
 </div>
                                     <div class="form-group">
