showing users on searcbox now

--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -1,13 +1,21 @@
 <nav class="navbar fixed-top navbar-light bg-white" id="nav">
     <div class="container">
       <div id="logo">
-         <img id="ig" src="../../assets/images/iglogo.png">
-         <img id="bar" src="../../assets/images/Untitled.png"/>
-         <img id="lettering" src="../../assets/images/letter.png"/>
+         <img id="ig" src="../../assets/images/iglogo.png" routerLink='/feed'>
+         <img id="bar" src="../../assets/images/Untitled.png" routerLink='/feed'>
+         <img id="lettering" src="../../assets/images/letter.png" routerLink='/feed'>
      </div>
      
      <div class="searchContainer"> 
-        <input id="searchInput" type="search" placeholder="Search" value="">
+        <input #searchBox (input)="search(searchBox.value)"id="searchBox" type="search" placeholder="Search" value=""
+        />
+        <ul class="search-result">
+            <li *ngFor="let user of users$ | async" >
+              <a routerLink="/user/{{instaHandle}}">
+                {{user.instaHandle}}
+              </a>
+            </li>
+          </ul> 
     </div>
      <div id="activity">
             <input type="checkbox" id="exploreToggle" class="visually-hidden">
