--- a/insta-clone/src/app/homenav/homenav.component.css
+++ b/insta-clone/src/app/homenav/homenav.component.css
@@ -15,7 +15,7 @@
     margin-left: 6vw;
 
 }
-#searchInput{
+#searchBox{
     margin-left: 6vw;
     margin-top: 2.4vh;
     
@@ -94,7 +94,7 @@
     
 }
 
-#searchInput {    
+#searchBox {    
     background: url('../../assets/images/icons8-search-50.png');
     background-repeat: no-repeat;
     border: solid 1px #dbdbdb;
@@ -111,7 +111,7 @@
     width: 250px;
     padding-left: 80px;
     }
-#searchInput:focus {
+#searchBox:focus {
     padding-left: 16px;
     background-position: 0;
     color:grey;
@@ -120,3 +120,20 @@ input[type=search]::-webkit-search-cancel-button {
     -webkit-appearance: searchfield-cancel-button;
     cursor: pointer;
 }
+.search-result{
+    width: 20%;
+    list-style: none;
+    font-size: 1.1em;
+    color: rgb(105, 105, 105);
+    /* border: 1px solid #ccc; */
+    position: absolute;
+    left: 45%;
+    top: 9vh;
+    max-height: calc(100%);
+    overflow-y: auto;
+    background: #fff;
+    
+  }
+/* .search-result:active{
+   color: #fff;
+ } */
