--- a/insta-clone/src/app/edit-profile/edit-profile.component.html
+++ b/insta-clone/src/app/edit-profile/edit-profile.component.html
@@ -1,6 +1,7 @@
-<div class=".col-xs-12">
+<div class="col-xs-12">
     <div class="panel panel-default panel-info Profile">
       <div class="panel-heading"> <h6>Edit Profile</h6> </div>
+      <div class="top"></div>
         <div>
         <p><strong>{{message}}</strong> </p>
       </div>
