--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -8,7 +8,7 @@
         <div class="col-md-4">
             <div class="d-flex">     
                 <h3 class="user-name">{{username}}</h3>
-                <button class="btn border btn-color btn-sm py-0 ml-2"><b>Edit Profile</b></button>
+                <a routerLink="/editProfile"><button class="btn border btn-color btn-sm py-0 ml-2"><b>Edit Profile</b></button></a>
             </div>
             <div>
                 <ul class="d-flex justify-content-between pl-0">
@@ -41,7 +41,7 @@
         </div>    
         <div class="col-7">
             <h3 class="user-name">{{username}}</h3>
-            <button class="btn border btn-color btn-sm w-100"><b>Edit Profile</b></button>
+            <a routerLink="/editProfile"><button class="btn border btn-color btn-sm w-100"><b>Edit Profile</b></button></a>
         </div>
     </div>
 
