minor changes for search

--- a/insta-clone/src/app/homenav/homenav.component.html
+++ b/insta-clone/src/app/homenav/homenav.component.html
@@ -11,7 +11,7 @@
         />
         <ul class="search-result">
             <li *ngFor="let user of users$ | async" >
-              <a routerLink="/user/{{instaHandle}}">
+              <a routerLink="/profile">
                 {{user.instaHandle}}
               </a>
             </li>
