--- a/insta-clone/src/app/homenav/homenav.component.css
+++ b/insta-clone/src/app/homenav/homenav.component.css
@@ -20,6 +20,28 @@
     margin-top: 2.4vh;
     
 }
+.search-result{
+    margin-left: 6vw;
+    margin-top: 2.4vh;
+    width: 25%;
+    list-style: none;
+    font-size: 1.1em;
+    color: rgb(105, 105, 105);
+    border: 1px solid #ccc;
+    border-top: none;
+    border-bottom: none;
+    position: absolute;
+    left: 36%;
+    top: calc(50% + 20px);
+    max-height: 80%;
+    overflow-y: auto;
+    background: #fff
+    
+  }
+
+.search-result :empty{
+   visibility: hidden;
+}
 #activity{
     margin-top: 2vh;
     margin-left: 6vw;
@@ -40,8 +62,7 @@
     .searchContainer {
       visibility: hidden;
     }
-    #logo{
-        
+    #logo{       
         position: absolute;
         left:0;
     }
@@ -120,20 +141,4 @@ input[type=search]::-webkit-search-cancel-button {
     -webkit-appearance: searchfield-cancel-button;
     cursor: pointer;
 }
-.search-result{
-    width: 20%;
-    list-style: none;
-    font-size: 1.1em;
-    color: rgb(105, 105, 105);
-    /* border: 1px solid #ccc; */
-    position: absolute;
-    left: 45%;
-    top: 9vh;
-    max-height: calc(100%);
-    overflow-y: auto;
-    background: #fff;
-    
-  }
-/* .search-result:active{
-   color: #fff;
- } */
+
